@@ -1,3 +1,7 @@
+2002-12-29  Phil Edwards  <pme@gcc.gnu.org>
+
+	* include/std/std_bitset.h:  Better comments.
+
 2002-12-28  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* docs/html/17_intro/porting.texi: Use @copying.
